# traitor

./: .gitignore  CMakeLists.txt  README.md
bubble-sort/: CMakeLists.txt  bubble-sort.cpp
factorial/: CMakeLists.txt  factorial.cpp
fibonacci/: CMakeLists.txt  fibonacci.cpp
for/: CMakeLists.txt  for.cpp
gcd/: CMakeLists.txt  gcd.cpp
insertion-sort/: CMakeLists.txt  insertion-sort.cpp
odd-template-params/: CMakeLists.txt  odd-template-params.cpp
selection-sort/: CMakeLists.txt  selection-sort.cpp
